# ember-frame

./: .gitignore  README.md  pyproject.toml
.agents/skills/art-room/: SKILL.md
.agents/skills/director-room/: SKILL.md
.agents/skills/imagegen-task/: SKILL.md
.agents/skills/imagegenpro/: SKILL.md
.agents/skills/isolated-imagegen-task/: SKILL.md
.agents/skills/writer-room/: SKILL.md
project/severed-homeland/: project.json  writer-room-input.md  背景.md
project/severed-homeland/art/: b01-core-character-asset-qc-report.md  b01-core-character-thread-results.json  b02-northern-and-faction-asset-qc-report.md  b07-style-reference-data.json  c026-wallfoot-market-crowd-prompt-review.md  costume-prompt-rewrite-score.md  p1-character-refinement.md  p2-asset-index.json  p2-asset-qc-report.md  p2-location-asset-index.json  p2-location-asset-qc-report.md  p2-location-thread-plan.json  p2-location-thread-results.json  p2-secondary-character-designs.json  p2-secondary-location-designs.json  p2-thread-plan.json  p2-thread-results.json  project-bai-yi-character-art-direction.md  project-bai-yi-character-asset-index.json  project-bai-yi-character-asset-manifest.json  project-bai-yi-character-asset-qc-report.md  project-bai-yi-character-designs.json  project-bai-yi-character-thread-plan.json  project-bai-yi-character-thread-results.json  project-base-material-board-asset-index.json  project-base-material-boards.md  (+158 more)
project/video-primer/: course-outline.md  index.md  publication-release-gate.md  publication-review-log.md
scripts/: qwen3_tts.py
tests/: test_qwen3_tts_cli.py
(+709 files in other folders)
