[project]
name = "ember-frame"
version = "0.1.0"
description = "AI video drama production monorepo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]
tts-mac = [
  "mlx-audio>=0.4.4",
]
tts-torch = [
  "qwen-tts>=0.1.1",
]

[tool.uv]
package = false
conflicts = [
  [
    { group = "tts-mac" },
    { group = "tts-torch" },
  ],
]

[tool.uv.workspace]
members = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.pytest.ini_options]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
